add remotedebug module